# BrainConnect

./: .gitignore  AGENTS.md  BUILD_SPEC.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  SCHEMA.md  brainconnect.cmd  brainconnect.ps1  brainconnect.sh  config.example.toml  pyproject.toml  wiki.sh
.claude/skills/wiki-maintainer/: SKILL.md
.github/workflows/: ci.yml
cli/: pyproject.toml
cli/brainconnect/: api.py  backup.py  candidates.py  cli.py  confidence.py  config.py  db.py  delegate.py  delegate_clients.py  drop.py  embed.py  errors.py  evidence.py  extract.py  federation.py  feedback.py  guard_hook.py  health.py  lint.py  mcp_server.py  migrate.py  observability.py  perfcapture.py  profiles.py  recall.py  refs.py  registry.py  render.py  review.py  roles.py  schema.py  scopes.py  search.py  server.py  skills.py  triage.py  util.py
cli/brainconnect/backends/: __init__.py  sqlite_fts.py
cli/brainconnect/okf/: __init__.py  adapter.py  export.py  model.py  okfimport.py  roundtrip.py  validate.py  yamlfmt.py
cli/brainconnect/safety/: pipeline.py  registry.py
cli/brainconnect/safety/baseline/: secrets.py
cli/brainconnect/safety/engines/: __init__.py  presidio.py
cli/librarian/: __init__.py  adjudicate.py  cli.py  client.py  config.py  extract.py  maintain.py  synthesize.py  triage.py  watch.py
cli/wiki/: api.py  candidates.py  cli.py  config.py  db.py  embed.py  entities.py  errors.py  evidence.py  extract.py  gate.py  gather.py  guard_hook.py  health.py  ingest.py  lint.py  mcp_server.py  migrate.py  profiles.py  recall.py  refs.py  render.py  review.py  schema.py  search.py  skills.py  triage.py  util.py
cli/wiki/backends/: base.py  sqlite_fts.py
docs/: CONTRACT.md  DELEGATION.md  FEDERATION.md  INTEGRATIONS.md  LEDGER_SPEC.md  MIGRATIONS.md  OBSERVABILITY.md  OKF.md  OPERATIONS.md  ORCHESTRATION.md  PERFCAPTURE.md  REGISTRY.md  ROLES.md  SAFETY.md  STATUS.md
docs/adr/: 0004-okf-export.md  0005-okf-validate.md  0006-okf-import.md  0007-okf-roundtrip.md  0009-http-trust-boundary-honor-system.md
scripts/: mechanical-maintain.ps1  mechanical-maintain.sh  okf_export_demo.py  okf_roundtrip_demo.py  okf_validate_demo.py
tests/: acceptance.py  contract_cases.py  gen_contract_fixtures.py
tests/contract/: capture_result_clean.json  capture_result_quarantined.json  health_degraded_required_engine.json  promotion_safety_refusal.json  recall_item_clean.json  recall_item_masked_trusted.json  recall_pack_withheld.json
